# fast-api-blog-app-gen-ai

./: .gitignore  README.md  hello.py  pyproject.toml
app/: init_db.py  main.py
app/api/: deps.py  main.py
app/api/routes/: genai.py  login.py  post.py  user.py  user_admin.py
app/core/: config.py  db.py  security.py
app/core/config/: db.py  embeddings.py  llm.py  logging_config.py  prompt_templates.py  vector_store.py
app/core/config/database/: db.py  init_db.py
app/core/config/llm/: embeddings.py  llm.py  prompt_templates.py  token_usage.py  vector_store.py
app/crud/: comment.py  post.py  user.py
app/exceptions/: exceptions.py
app/genai/: llm.py  responses_parsers.py  vector_store.py
app/genai/services/: summarization.py
app/genai/services/question_answer/: question_answer.py
app/middleware/: exception_middleware.py  logging_middleware.py
app/middlewares/: exception_middleware.py  logging_middleware.py
app/models/: base_model_mixin.py  comment.py  post.py  user.py
app/schemas/: comment.py  llm_responses_parsers.py  post.py  responses_parsers.py  user.py
app/services/: comment.py  comment_analysis.py  login.py  post.py  suggestion.py  summarization.py  user.py
app/services/question_answer/: memory.py  question_answer.py
