[project]
name = "fast-api-blog-app-gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "passlib>=1.7.4",
    "psycopg>=3.2.4",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.5",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]
